directory to hold kernel phase structures

--- a/analysis_charis.ipynb
+++ b/analysis_charis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,19 +65,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ddir = \"./subaru/\" # data directory\n",
+    "ddir = \"./subaru/data'\" # data directory\n",
     "\n",
     "fname = \"charis_16.fits\"\n",
     "ftname = \"charis_ft16.fits\"\n",
     "\n",
     "no_kp = False\n",
     "bispec = False"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "CRSA00022602.fits - CRSA00022605.fits : Darks\n",
+    "CRSA00022606.fits - CRSA00022611.fits : Arcs\n",
+    "CRSA00022472.fits - CRSA00022475.fits : HD196524 (obj) loop-close\n",
+    "CRSA00022476.fits - CRSA00022479.fits : HD196524 (obj) loop-open\n",
+    "CRSA00022480.fits - CRSA00022484.fits : HD183324 (cal) loop-close\n",
+    "CRSA00022485.fits - CRSA00022489.fits : HD183324 (cal) loop-open"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CRSA00022472_cube.fits  CRSA00022479_cube.fits  CRSA00022486_cube.fits\r\n",
+      "CRSA00022473_cube.fits  CRSA00022480_cube.fits  CRSA00022487_cube.fits\r\n",
+      "CRSA00022474_cube.fits  CRSA00022481_cube.fits  CRSA00022488_cube.fits\r\n",
+      "CRSA00022475_cube.fits  CRSA00022482_cube.fits  CRSA00022489_cube.fits\r\n",
+      "CRSA00022476_cube.fits  CRSA00022483_cube.fits  log20170812.txt\r\n",
+      "CRSA00022477_cube.fits  CRSA00022484_cube.fits\r\n",
+      "CRSA00022478_cube.fits  CRSA00022485_cube.fits\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls subaru/data"
    ]
   },
   {
@@ -302,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# some of the recentering seems to fail - only sometimes - on Palomar data and I can't work out why, so here are \n",
@@ -586,7 +623,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chi2 = np.sum(((a.kpd -d)/a.kpe)**2.)\n",
